# expense-tracker

./: LICENSE
expense-tracker/: README.md  expenses.json  expenses_backup.csv  pyproject.toml
expense-tracker/expense_tracker/: __init__.py  cli.py  manager.py  models.py  storage.py
expense-tracker/expense_tracker.egg-info/: SOURCES.txt  requires.txt
